<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/nameSong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/namePlaylist"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/namePlaylist"
        android:text="@string/name_playlist"
        android:layout_margin="@dimen/margin_base"
        app:layout_constraintHorizontal_weight="1"/>
    <EditText
        android:id="@+id/namePlaylist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/nameSong"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="3"
        android:layout_margin="@dimen/margin_base"
        android:autofillHints="name of song"
        android:inputType="text"
        tools:ignore="LabelFor" />
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/namePlaylist"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/margin_base"
        android:text="@string/search" />
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/namePlaylist"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/margin_base"
        android:text="@string/add_playlist" />
    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch"
        android:layout_margin="@dimen/margin_base"
        android:textAlignment="center"
        android:background="@color/teal_200"
        android:textColor="@color/white" />
    <ListView
        android:id="@+id/MyListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:layout_margin="@dimen/margin_base"/>

</androidx.constraintlayout.widget.ConstraintLayout>