<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/nameSong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/editNameSong"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editNameSong"
        android:text="@string/name_song"
        android:layout_margin="@dimen/margin_base"
        app:layout_constraintHorizontal_weight="1"/>
    <EditText
        android:id="@+id/editNameSong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/nameSong"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="4"
        android:layout_margin="@dimen/margin_base"
        android:autofillHints="name of song"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/nameArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/EditNameArtist"
        app:layout_constraintBottom_toBottomOf="@+id/EditNameArtist"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/EditNameArtist"
        android:text="@string/name_artist"
        android:layout_margin="@dimen/margin_base"
        app:layout_constraintHorizontal_weight="1"/>
    <EditText
        android:id="@+id/EditNameArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editNameSong"
        app:layout_constraintLeft_toRightOf="@+id/nameArtist"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="4"
        android:layout_margin="@dimen/margin_base"
        android:autofillHints="name of artist"
        android:inputType="text"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/nameCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/spinnerNameCategory"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerNameCategory"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinnerNameCategory"
        android:text="@string/category"
        android:layout_margin="@dimen/margin_base"
        app:layout_constraintHorizontal_weight="1"/>
    <Spinner
        android:id="@+id/spinnerNameCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/EditNameArtist"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/nameCategory"
        android:text="@string/category"
        app:layout_constraintHorizontal_weight="4"
        android:layout_margin="@dimen/margin_base"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spinnerNameCategory"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/margin_base"
        android:text="@string/search" />
    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch"
        android:layout_margin="@dimen/margin_base"
        android:textAlignment="center"
        android:background="@color/teal_200"
        android:textColor="@color/white" />
    <GridView
        android:id="@+id/MyGridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/margin_base"
        android:numColumns="2">

    </GridView>

</androidx.constraintlayout.widget.ConstraintLayout>